refactor: ajust version desktop

--- a/lp-sevicos-principal.html
+++ b/lp-sevicos-principal.html
@@ -15,7 +15,7 @@
 <style>
  #corpo {display: block;position: relative;margin: 0 auto; width: 100%;max-width: 1600px;box-sizing: border-box; padding: 0; font-family: 'Open Sans', sans-serif; color: #000000;overflow: hidden; background:#FFFFFF; text-align: center;}
  a{text-decoration: none}
- hr{width: 90%;}
+ hr{width: 85%;}
  /* BUTTON SECONDARY DEFAULT */
  .btn-secondary{border:1px solid #333333; padding: 1% 7%; border-radius: 999px; color: #333333; font-size: 1vw; }
  /* CARDO ROOT-DEFAULT */
@@ -39,12 +39,12 @@
 #corpo .servicos .card-servico picture{width:50%; display: block; margin: 0 auto;}
 #corpo .servicos .card-servico .text-card-servico p.artista{margin-bottom: 0;}
 #corpo .servicos .card-servico .text-card-servico h2{margin-top:0;font-size:1vw}
-#corpo .servicos .card-servico .text-card-servico h3{width:60%; margin:2% auto; font-size:1vw;line-height: 27px;}
+#corpo .servicos .card-servico .text-card-servico h3{width:71%; margin:2% auto; font-size:1vw;line-height: 27px;}
 #corpo .servicos .card-servico .text-card-servico p{font-size:0.9vw; margin-bottom:5%;}
 
 
 /* SOBRE A ARTISTA */
-#corpo .sobre-artista::before{ padding: 0; padding-top: 46.0625%;}  
+#corpo .sobre-artista::before{ padding: 0; padding-top: 42.0625%;}  
 #corpo .sobre-artista picture{ width:100%; margin:0 auto; }
 #corpo .sobre-artista h2{ font-size: 1.6vw; margin: 4% auto 2%; font-weight:700;}
 /* #corpo .sobre-artista a{ position: absolute; width: 17%; height:7%; background-color: transparent; bottom: 25%; left: 50%;} */
@@ -164,12 +164,12 @@
               <div class="card-servico">
                 <picture>
                       <!-- <source media="(max-width: 1100px)" srcset="https://fastshopwr-a.akamaihd.net/pages/2024/06/files_lp_05/sobre-artista-mobile.png"> -->
-                      <img width="100%" height="auto" src="files/servico-instalacao.png" alt="banner artista Arte por Marcelo Colmenero">
+                      <img width="100%" height="auto" src="files/servico-instalacao.png" alt="banner artista Arte por Camila Teshima">
                 </picture>
                 <div class="text-card-servico">
                   <p class="artista">Arte por</p>
                   <h2>Camila Teshima</h2>
-                  <h3>Cuidar é: Instalar e Ensinar 
+                  <h3>Cuidar é: Instalar e Ensinar<br>
                     sobre o uso</h3>
                   <p>Instalação e orientação de uso</p>
                 </div>
@@ -179,14 +179,13 @@
               <div class="card-servico">
                 <picture>
                       <!-- <source media="(max-width: 1100px)" srcset="https://fastshopwr-a.akamaihd.net/pages/2024/06/files_lp_05/sobre-artista-mobile.png"> -->
-                      <img width="100%" height="auto" src="files/servico-instalacao.png" alt="banner artista Arte por Marcelo Colmenero">
+                      <img width="100%" height="auto" src="files/servico-seguro.png" alt="banner artista Arte por Marcelo Colmenero">
                 </picture>
                 <div class="text-card-servico">
                   <p class="artista">Arte por</p>
-                  <h2>Camila Teshima</h2>
-                  <h3>Cuidar é: Instalar e Ensinar 
-                    sobre o uso</h3>
-                  <p>Instalação e orientação de uso</p>
+                  <h2>Marcelo Colmenero</h2>
+                  <h3>Cuidar é: Oferecer  segurança<br> nos momentos inesperados</h3>
+                  <p>Seguro Contra Roubo</p>
                 </div>
                   <a class="btn-secondary" href="https://www.fastshop.com.br/web/a/fast_cuida_colaboracoes">Saiba mais</a>    
               </div>
@@ -194,14 +193,13 @@
               <div class="card-servico">
                 <picture>
                       <!-- <source media="(max-width: 1100px)" srcset="https://fastshopwr-a.akamaihd.net/pages/2024/06/files_lp_05/sobre-artista-mobile.png"> -->
-                      <img width="100%" height="auto" src="files/servico-instalacao.png" alt="banner artista Arte por Marcelo Colmenero">
+                      <img width="100%" height="auto" src="files/servico-garantia-estendida.png" alt="banner artista Arte por Camila Mizutani">
                 </picture>
                 <div class="text-card-servico">
                   <p class="artista">Arte por</p>
-                  <h2>Camila Teshima</h2>
-                  <h3>Cuidar é: Instalar e Ensinar 
-                    sobre o uso</h3>
-                  <p>Instalação e orientação de uso</p>
+                  <h2>Camila Mizutani</h2>
+                  <h3>Cuidar é: Garantir mais tempo<br> com o que funciona bem</h3>
+                  <p>Garantia Estendida</p>
                 </div>
                   <a class="btn-secondary" href="https://www.fastshop.com.br/web/a/fast_cuida_colaboracoes">Saiba mais</a>    
               </div>
@@ -209,14 +207,13 @@
               <div class="card-servico">
                 <picture>
                       <!-- <source media="(max-width: 1100px)" srcset="https://fastshopwr-a.akamaihd.net/pages/2024/06/files_lp_05/sobre-artista-mobile.png"> -->
-                      <img width="100%" height="auto" src="files/servico-instalacao.png" alt="banner artista Arte por Marcelo Colmenero">
+                      <img width="100%" height="auto" src="files/servico-suporte-tecnico.png" alt="banner artista Arte por Cahro Naka">
                 </picture>
                 <div class="text-card-servico">
                   <p class="artista">Arte por</p>
-                  <h2>Camila Teshima</h2>
-                  <h3>Cuidar é: Instalar e Ensinar 
-                    sobre o uso</h3>
-                  <p>Instalação e orientação de uso</p>
+                  <h2>Cahro Naka</h2>
+                  <h3>Cuidar é: Configurar e deixar<br> pronto para usar </h3>
+                  <p>Suporte Técnico</p>
                 </div>
                   <a class="btn-secondary" href="https://www.fastshop.com.br/web/a/fast_cuida_colaboracoes">Saiba mais</a>    
               </div>
@@ -224,14 +221,14 @@
               <div class="card-servico">
                 <picture>
                       <!-- <source media="(max-width: 1100px)" srcset="https://fastshopwr-a.akamaihd.net/pages/2024/06/files_lp_05/sobre-artista-mobile.png"> -->
-                      <img width="100%" height="auto" src="files/servico-instalacao.png" alt="banner artista Arte por Marcelo Colmenero">
+                      <img width="100%" height="auto" src="files/servico-apple-care.png" alt="banner artista Arte por Marcelo Colmenero">
                 </picture>
                 <div class="text-card-servico">
-                  <p class="artista">Arte por</p>
-                  <h2>Camila Teshima</h2>
-                  <h3>Cuidar é: Instalar e Ensinar 
-                    sobre o uso</h3>
-                  <p>Instalação e orientação de uso</p>
+                  <!-- <p class="artista">Arte por</p>
+                  <h2>Camila Teshima</h2> -->
+                  <br><br><br>
+                  <h3>Cuidar é: Instalar e Ensinar<br> sobre o uso</h3>
+                  <p>Instalação e Orientação de uso</p>
                 </div>
                   <a class="btn-secondary" href="https://www.fastshop.com.br/web/a/fast_cuida_colaboracoes">Saiba mais</a>    
               </div>
@@ -243,10 +240,10 @@
                 </picture>
                 <div class="text-card-servico">
                   <p class="artista">Arte por</p>
-                  <h2>Camila Teshima</h2>
-                  <h3>Cuidar é: Instalar e Ensinar 
-                    sobre o uso</h3>
-                  <p>Instalação e orientação de uso</p>
+                  <h2>Arthur Ortega</h2>
+                  <h3>Cuidar é: Conectar a sua casa<br>
+                    ao seu estilo de vida Casa Inteligente</h3>
+                  <p>Casa Inteligente</p>
                 </div>
                   <a class="btn-secondary" href="https://www.fastshop.com.br/web/a/fast_cuida_colaboracoes">Saiba mais</a>    
               </div>
