--- a/lp-sevicos-principal.html
+++ b/lp-sevicos-principal.html
@@ -16,7 +16,7 @@
  #corpo {display: block;position: relative;margin: 0 auto; width: 100%;max-width: 1600px;box-sizing: border-box; padding: 0; font-family: 'Open Sans', sans-serif; color: #000000;overflow: hidden; background:#FFFFFF; text-align: center;}
  a{text-decoration: none}
    /* RESET DAS LINHA DIVISORIAS */
-   hr.line-desktop{width: 85%;}
+   hr.line-desktop{display:block;width: 85%;}
   /* AJUSTE LINHAS MOBILE */
   hr.line-mobile{display:none;}
  /* BUTTON SECONDARY DEFAULT */
@@ -65,18 +65,19 @@
 
   /* SESSÃO CARDS SERVIÇOS */
   #corpo .container-servicos::before {padding-top: 86%;}
+  #corpo .servicos .card-servico .text-card-servico h2{font-size:24px}
   #corpo .servicos .card-servico .text-card-servico h3{width:278px;font-size:18px;}
-  #corpo .servicos .card-servico:nth-child(9) .text-card-servico h3{margin-top: 2.3vw;}
+  #corpo .servicos .card-servico:nth-child(9) .text-card-servico h3{margin-top: 60px;}
   #corpo .servicos .card-servico:nth-child(11) .text-card-servico h3{width: 313px;}
-
-  #corpo .texto-artistas p{font-size:0.9vw;}
+  #corpo .servicos .card-servico .text-card-servico p{font-size:21px;}
 }
+  #corpo .texto-artistas p{font-size:21px;}
 @media screen and (max-width: 1100px) {
   .btn-secondary{font-size:4vw;font-weight:600; padding:3% 35%; }
   /* RESET DAS LINHA DIVISORIAS */
   hr.line-desktop{display:none;}
   /* AJUSTE LINHAS MOBILE */
-  hr.line-mobile{width:100%; margin:12% 0;}
+  hr.line-mobile{display:block;width:100%; margin:12% 0;}
   /* CHAMADA TOPO */
   #corpo .chamada-topo img {width:50%;}
   #corpo .chamada-topo p {width: 90%; font-size:3.4vw;}
@@ -114,7 +115,7 @@
 #corpo .texto-artistas img{width: 50%;}
 #corpo .texto-artistas p{font-size:3.4vw;line-height: 6vw; margin-bottom:10%;}
 #corpo .texto-artistas .button-bottom{width: 100%; margin-bottom: 10%;}
- }
+}
 
 </style>
 <!-- INICIO LP -->
